fixed Pos Tooltip

--- a/form/index.html
+++ b/form/index.html
@@ -234,10 +234,16 @@
         </form>
 
         <div id="AuswertungsChart">
-
             <fieldset>
                 <legend>Auswertung</legend>
-                <div id="ChartTooltip"></div>
+                <div id="ValueLines"></div>
+                <div id="ChartTooltip">
+                    <div id="ChartToolDate">Date</div>
+                    <div id="ChartToolSituation">Sit</div>
+                    <div id="ChartToolMedikation">Med</div>
+                    <div id="ChartToolWirkungen">Wirk</div>
+                    <div id="ChartToolKommentar">Komm</div>
+                </div>
                 <div id="ChartLegend"></div>
                 <!-- width="500" height="400" -->
                 <canvas id="ChartCanvas"></canvas>
