--- a/form/index.html
+++ b/form/index.html
@@ -238,11 +238,26 @@
                 <legend>Auswertung</legend>
                 <div id="ValueLines"></div>
                 <div id="ChartTooltip">
-                    <div id="ChartToolDate">Date</div>
-                    <div id="ChartToolSituation">Sit</div>
-                    <div id="ChartToolMedikation">Med</div>
-                    <div id="ChartToolWirkungen">Wirk</div>
-                    <div id="ChartToolKommentar">Komm</div>
+                    <table>
+                        <tr>
+                            <td>
+                                <div id="ChartToolDate"></div>
+                            </td>
+                            <td>
+                                <div id="ChartToolSituation"></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div id="ChartToolWirkungen"></div>
+                            </td>
+                            <td>
+                                <div id="ChartToolMedikation"></div>
+                                <div id="ChartToolKommentar"></div>
+                            </td> 
+                        </tr>
+
+                    </table>
                 </div>
                 <div id="ChartLegend"></div>
                 <!-- width="500" height="400" -->
