fixed issue with medikation as obj

--- a/form/index.html
+++ b/form/index.html
@@ -15,8 +15,8 @@
     <!-- <link rel="stylesheet" href=" "> -->
 
 
-    <link rel="stylesheet" href="css/reseter.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" name="reseter" href="css/reseter.css" />
+    <link rel="stylesheet" name="style" href="css/style.css">
     <script src="js/formtoobj.js"></script>
     <script src="js/md5.js"></script>
     <script src="js/debugHelper.js"></script>
@@ -252,7 +252,7 @@
                                 <div id="ChartToolWirkungen"></div>
                             </td>
                             <td>
-                                <div id="ChartToolMedikation"></div>
+                                <div id="ChartToolMedikation">für Details in das Diagramm zeigen</div>
                                 <div id="ChartToolKommentar"></div>
                             </td> 
                         </tr>
@@ -292,7 +292,7 @@
             // all form elements for populating
         let ProfilFormElements = document.getElementById('ProfilForm').elements;
 
-        // // initial localData
+        // initial localData
         // var initObj = new Object({
         //     Profil: {
         //         Situations: {
