show slider value

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- , maximum-scale=1.0, user-scalable=no -->
     <link rel="icon" type="image/svg+xml" href="https://dev.rasal.de/brainload/templates/images/brain.png">
 
-    <!-- <link rel="stylesheet" name="reseter" href="css/reseter.css" /> -->
-    <!-- <link rel="stylesheet" name="style" href="css/icono.css"> -->
+    <link rel="stylesheet" name="reseter" href="css/reseter.css" />
+    <link rel="stylesheet" name="style" href="css/icono.css">
     <link rel="stylesheet" name="style" href="css/style.css">
 
 
